# TotalSMS-nx

./: CMakeLists.txt  build_release.sh
.github/workflows/: build_presets.yml
app/: CMakeLists.txt
app/include/: app.hpp  defines.hpp  evman.hpp  fs.hpp  i18n.hpp  image.hpp
app/include/emu_helpers/: rewind.h  rewind_bar.hpp
app/include/ui/: types.hpp
app/include/ui/menus/: emu_menu.hpp  filebrowser.hpp  intro_menu.hpp  menu_base.hpp
app/source/: app.cpp  i18n.cpp  image.cpp  log.cpp  main.cpp  threaded_file_transfer.cpp
app/source/emu_helpers/: rewind.c  rewind_bar.cpp
app/source/ui/: error_box.cpp  notification.cpp  nvg_util.cpp  option_box.cpp  progress_box.cpp
app/source/ui/menus/: emu_menu.cpp  filebrowser.cpp  intro_menu.cpp  menu_base.cpp
assets/embed/intro/: music.bfstm.lz4
assets/romfs/themes/: default_theme.ini
